--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -1,68 +1,349 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 
 body {
-  margin: 0;
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* Style attributes for the entire page */
+* {
+  background-color: rgba(143, 82, 2, 0.164);
+  color: white;
+
+}
+
+/* Custom Variables for CSS */
+:root {
+  --mgn1: 1%;
+}
+
+/* Attributes to style the header */
+header {
+  border: 13px double white;
+  width: 100%;
+
+}
+
+/* Attributes that style all images on the webpage */
+img {
+  opacity: .5;
+}
+
+/* Styling the hover effect when images are hovered over */
+img:hover {
+  opacity: 1;
+}
+
+/* Styling the Navigation Container, ul, li, h1, and a elements */
+.navcontainer {
+  display: flex-column;
+  justify-content: space-between;
+  margin: .5%;
+  padding: .5%;
+}
+
+.navcontainer ul {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: end;
+  padding-right: 1%;
+  padding-bottom: .5%;
+
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.navcontainer a:hover {
+  background-color: rgba(172, 68, 7, 0.644);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.navcontainer li {
+  font-size: 2em;
+  margin-left: var(--mgn1);
+  padding: 1%;
+
+
+}
+
+.navcontainer h1 {
+  font-size: 5em;
+  padding-left: 1%;
+}
+
+.navcontainer a {
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  padding: 10px;
+
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+/* Styling the section that has the bird background image and profile picture */
+.bigcontainer {
+  width: 98%;
+  min-height: 95vh;
+  background: url(../Assets/pexels-pixabay-207237.jpg) no-repeat center / cover;
+  margin: var(--mgn1);
+
+}
+
+.bigcontainer h2 {
+  font-size: 2.5em;
+  background-color: rgba(0, 0, 0, 0);
+  margin-top: 1%;
+  color: rgba(143, 82, 2, 0.678);
+  margin-left: 7.5%;
+}
+
+#profilepic {
+  margin-top: 1%;
+  width: 25%;
+  margin-left: var(--mgn1);
+  opacity: 1;
+}
+
+/* Styles the main project Image */
+#bigimagepic {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 400px;
+  min-width: 85.5vw;
+}
+
+/* Styles the 4 smaller project images */
+#smallpic {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 140px;
+  min-width: 20vw;
+}
+
+.bigcontainer p {
+  color: rgb(7, 7, 7);
+  background-color: rgba(16, 16, 16, 0);
+  width: 23%;
+  margin-left: var(--mgn1);
+  padding: 1%;
+}
+
+.subcontainer {
+  display: flex-column;
+  border: 13px double white;
+  margin: var(--mgn1);
+  padding: 2%;
+
+}
+
+/* Gives display properties that house the 4 small project titles and images */
+.subcontainersmall {
+  display: flex;
+  border: 13px double white;
+  margin: var(--mgn1);
+  padding: 1%;
+  justify-content: space-evenly;
+}
+
+/* Adds slight styling the the 4 project sections to give a little more space */
+.card {
+  display: block;
+  margin: var(--mgn1);
+}
+
+/* Styles the boarder that houses the big project image */
+.subcontainer h2 {
+  border: 13px double white;
+  text-align: center;
+  padding: 1%;
+  background-color: rgba(212, 71, 20, 0.626);
+  margin: 1%;
+
+}
+
+/* Styles the boarder and margins for the section houses the 4 small projects */
+.subcontainersmall h2 {
+  border: 13px double white;
+  text-align: center;
+  padding: 1%;
+  background-color: rgba(212, 71, 20, 0.626);
+
+}
+
+/* Styles the footer boarder*/
+footer {
+  border: 13px double white;
+  width: 100%;
+  background-color: rgba(143, 82, 2, 0.295);
+
+}
+
+.footercontainer {
+  margin: .5%;
+  padding: .5%;
+
+}
+
+.footercontainer ul {
+  display: flex;
+  justify-content: space-evenly;
+  padding-right: 1%;
+  padding-bottom: .5%;
+
+}
+
+.footercontainer h3 {
+  font-size: 1em;
+  padding-left: 1%;
+  text-align: center;
+  border-bottom: 1px solid white;
+}
+
+.footercontainer li {
+  border: 4px double white;
+  font-size: 1em;
+  margin-left: var(--mgn1);
+  padding: 1%;
+  margin-top: 10px;
+}
+
+/* Changes certain values to be more responsive when screen size is reduced */
+@media screen and (max-width: 992px) {
+  .navcontainer li {
+    font-size: 20px;
+    margin-left: var(--mgn1);
+    padding: 1%;
   }
-  a:hover {
-    color: #747bff;
+
+  .navcontainer a {
+    padding: 0%;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .bigcontainer p {
+    color: rgb(7, 7, 7);
+    background-color: rgba(16, 16, 16, 0);
+    width: 40%;
+    height: 30%;
+    margin-left: var(--mgn1);
+    padding: 1%;
   }
-} */
+}
