--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -131,7 +131,7 @@ table {
 
 /* Style attributes for the entire page */
 * {
-  background-color: rgba(143, 82, 2, 0.164);
+  background-color: rgba(21, 83, 107, 0.164);
   color: white;
 
 }
@@ -175,7 +175,7 @@ header {
 }
 
 .navcontainer a:hover {
-  background-color: rgba(172, 68, 7, 0.644);
+  background-color: rgba(21, 83, 107, 0.164);
 }
 
 .navcontainer li {
@@ -210,7 +210,7 @@ header {
   font-size: 2.5em;
   background-color: rgba(0, 0, 0, 0);
   margin-top: 1%;
-  color: rgba(143, 82, 2, 0.678);
+  color: rgb(255, 255, 255);
   margin-left: 2.5%;
 }
 
@@ -270,12 +270,18 @@ header {
   margin: var(--mgn1);
 }
 
+.btn-spacing {
+  margin-right: 3px;
+  margin-top: 2.5px;
+  /* Adjust the value according to your preference */
+}
+
 /* Styles the boarder that houses the big project image */
 .subcontainer h2 {
   border: 13px double white;
   text-align: center;
   padding: 1%;
-  background-color: rgba(212, 71, 20, 0.626);
+  background-color: rgba(21, 83, 107, 0.164);
   margin: 1%;
 
 }
@@ -285,7 +291,7 @@ header {
   border: 13px double white;
   text-align: center;
   padding: 1%;
-  background-color: rgba(212, 71, 20, 0.626);
+  background-color: rgba(21, 83, 107, 0.164);
 
 }
 
@@ -293,7 +299,7 @@ header {
 footer {
   border: 13px double white;
   width: 100%;
-  background-color: rgba(143, 82, 2, 0.295);
+  background-color: rgba(21, 83, 107, 0.164);
 
 }
 
